@@ -1,4 +1,8 @@
 2008-06-04 - Sean Huber (shuber@huberry.com)
+	* Controller no longer has to call uses_authentication - logic included automatically
+	* Updated README
+
+2008-06-04 - Sean Huber (shuber@huberry.com)
 	* Updated README
 
 2008-06-04 - Sean Huber (shuber@huberry.com)
